--- a/hw7/package.json
+++ b/hw7/package.json
@@ -8,14 +8,6 @@
     "server": "cd backend && yarn server"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "axios": "^0.24.0",
-    "babel": "^6.23.0",
-    "cors": "^2.8.5",
-    "dotenv-defaults": "^3.0.0",
-    "express": "^4.17.1",
-    "mongoose": "^6.0.13",
-    "nodemon": "^2.0.15",
-    "styled-components": "^5.3.3"
+    "axios": "^0.24.0"
   }
 }
