--- a/hack2/package.json
+++ b/hack2/package.json
@@ -25,8 +25,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "npx cypress run --spec cypress/integration/public.spec.js",
+    "eject": "react-scripts eject",
+    "server": "nodemon server/server.js --ext js --exec babel-node",
+    "cypress": "cypress open"
   },
   "eslintConfig": {
     "extends": [
