--- a/hw9/package.json
+++ b/hw9/package.json
@@ -8,6 +8,7 @@
     "server": "cd backend && yarn server"
   },
   "dependencies": {
-    "axios": "^0.24.0"
+    "axios": "^0.24.0",
+    "styled-components": "^5.3.3"
   }
 }
